--- a/templates/dashboard/sidebar.html
+++ b/templates/dashboard/sidebar.html
@@ -1,12 +1,17 @@
+<style>
+    ul a {
+        border-radius: 5px;
+    }
+</style>
 <div class="col-lg-3 my-2">
     <!--   SIDEBAR   -->
     <ul class="list-group text-right px-0">
         <a class="list-group-item {% if request.path == '/dashboard/' %}active{% endif %}" href="{% url 'user-dashboard' %}"> کیستی؟ </a>
         <a class="list-group-item {% if request.path == '/dashboard/profile/' %}active{% endif %}" href="{% url 'user-profile' %}"> پروفایل </a>
         <a class="list-group-item {% if request.path == '/dashboard/orders/' %}active{% endif %}" href="{% url 'user-orders' %}"> زد و بندها </a>
-        <a class="list-group-item" href="#"> تغییر رمزشب </a>
+        <a class="list-group-item {% if request.path == '/dashboard/chpwd/' %}active{% endif %}" href="{% url 'user-chpwd' %}"> تغییر رمزشب </a>
         <br />
-        <a class="btn btn-outline-danger btn-block text-right list-group-item" href="{% url 'logout' %}">
+        <a class="btn btn-outline-danger btn-block text-right list-group-item btn-shaking" href="{% url 'logout' %}">
             <span class="row text-dark">
                 <span class="col-6">
                     اوکی بای!
