--- a/templates/includes/navigationbar.html
+++ b/templates/includes/navigationbar.html
@@ -66,7 +66,7 @@
                     </div>  <!-- category-wrap.// -->
                 </div> <!-- col.// -->
                 <a href="{% url 'store' %}" class="btn btn-primary" >فروشگاه</a>
-                <div class="mt-3 col-lg col-md-6 col-sm-6 col-6 col">
+                <div class="mt-3 col-lg col-md-6 col-sm-12 col-12 col">
                     <form action="#" class="search">
                         <div class="input-group w-100">
                             <div class="input-group-append">
@@ -78,7 +78,7 @@
                         </div>
                     </form> <!-- search-wrap .end// -->
                 </div> <!-- col.// -->
-                <div style="background: white; border-radius: 1rem" class="col-lg-3 col-sm-6 col-6 order-2 order-lg-3 p-1">
+                <div style="border-radius: 1rem;" class="col-lg-3 col-md-4 col-sm-12 col-12 order-2 order-lg-3 p-1">
                     <div class="d-flex justify-content-end mb-3 mb-lg-0">
                         <div class="text-right widget-header">
                             {% if user.ID is None %}
