--- a/templates/purchase/preview.html
+++ b/templates/purchase/preview.html
@@ -31,7 +31,7 @@
                         روش پرداخت
                       </div>
                       <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
+                        <h5 class="card-title">پرداخت از طریق کارت به کارت و ارسال رسید</h5>
                       </div>
 
                     </div>
@@ -149,7 +149,7 @@
                               <dd class="text-left text-success b"><strong>{{ order.must_be_paid }}</strong>&nbsp;&nbsp; تومن</dd>
                             </dl>
                             <hr>
-                            <a href="{{ order.check_url }}" class="btn btn-success btn-block expandable-button">تایید نهایی</a>
+                            <a href="{{ order.check_url }}" class="btn btn-success btn-block btn-shaking">تایید نهایی</a>
                         </div> <!-- card-body.// -->
                     </div> <!-- card.// -->
 
