--- a/templates/purchase/result.html
+++ b/templates/purchase/result.html
@@ -6,7 +6,7 @@
         <h2 class="text-center">Payment Successful</h2>
         <br>
         <div class="text-center">
-            <a href="{% url 'store' %}" class="btn btn-success">Shop more</a>
+            <a href="{% url 'store' %}" class="btn btn-success btn-shaking">Shop more</a>
         </div>
     </div>
 
