--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -28,7 +28,7 @@
 
               </div> <!-- form-group form-check .// -->
               <div class="form-group">
-                  <button type="submit" class="btn btn-primary btn-block expandable-button">برو!</button>
+                  <button type="submit" class="btn btn-primary btn-block btn-shaking">برو!</button>
               </div> <!-- form-group// -->
           </form>
       </div> <!-- card-body.// -->
