--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -40,7 +40,7 @@
                         </div> <!-- form-group end.// -->
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-block expandable-button">تامام!</button>
+                        <button type="submit" class="btn btn-success btn-block btn-shaking">تامام!</button>
                     </div> <!-- form-group// -->
                    <hr />
 
