--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -58,7 +58,7 @@
                                         <div class="card-body">
                                             <b class="card-title">تعداد زد و بندها</b>
                                             <h1 class="text-success">{{ your_orders_count }}</h1>
-                                            <a class="btn btn-block btn-outline-secondary" href="{% url 'user-orders' %}">مشاهده</a>
+                                            <a class="btn btn-block btn-outline-secondary btn-shaking" href="{% url 'user-orders' %}">مشاهده</a>
                                         </div>
                                     </div>
                                 </div>
