--- a/templates/purchase/order.html
+++ b/templates/purchase/order.html
@@ -135,8 +135,8 @@
                                   <dd class="text-left text-success b"><strong>{{ stack.final_cost }}</strong>&nbsp;&nbsp; تومن</dd>
                                 </dl>
                                 <hr>
-                                <button type="submit" class="btn btn-success btn-block expandable-button"> ثبت سفارش </button>
-                                <a href="{% url 'store' %}" class="btn btn-secondary btn-block expandable-button"> ادامه خرید </a>
+                                <button type="submit" class="btn btn-success btn-block btn-shaking"> ثبت سفارش </button>
+                                <a href="{% url 'store' %}" class="btn btn-secondary btn-block btn-shaking"> ادامه خرید </a>
                             </div> <!-- card-body.// -->
                         </div> <!-- card.// -->
                     </aside> <!-- col.// -->
