--- a/templates/purchase/result.html
+++ b/templates/purchase/result.html
@@ -3,10 +3,10 @@
 {% block content %}
     <div class="container" style="margin-top: 50px;">
         <center><i class="fa fa-check-circle mx-auto" style="font-size: 72px;margin-bottom: 20px;color: #28A745;"></i></center>
-        <h2 class="text-center">Payment Successful</h2>
+        <h2 class="text-center">پرداخت موفقیت آمیز بود.</h2>
         <br>
         <div class="text-center">
-            <a href="{% url 'store' %}" class="btn btn-success btn-shaking">Shop more</a>
+            <a href="{% url 'store' %}" class="btn btn-success btn-shaking">خرید بیشتر</a>
         </div>
     </div>
 
@@ -39,10 +39,10 @@
                                 <div class="invoice-details mt25">
                                     <div class="well">
                                         <ul class="list-unstyled mb0">
-                                            <li><strong>Order</strong> #</li>
-                                            <li><strong>Transaction</strong> #</li>
-                                            <li><strong>Order Date:</strong> Monday, October 10th, 2015</li>
-                                            <li><strong>Status:</strong> PAID</li>
+                                            <li><strong>سفارش</strong> #</li>
+                                            <li><strong>تراکنش</strong> #</li>
+                                            <li><strong>تاریخ سفارش:</strong> Monday, October 10th, 2015</li>
+                                            <li><strong>وضعیت:</strong> PAID</li>
                                         </ul>
                                     </div>
                                 </div>
@@ -52,9 +52,9 @@
                                         <table class="table table-bordered">
                                             <thead>
                                                 <tr>
-                                                    <th class="per70 text-center">Description</th>
+                                                    <th class="per70 text-center">توضیحات</th>
                                                     <th class="per5 text-center">Qty</th>
-                                                    <th class="per25 text-center">Total</th>
+                                                    <th class="per25 text-center">جمع کل</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
