--- a/templates/dashboard/single_order.html
+++ b/templates/dashboard/single_order.html
@@ -1,25 +1,26 @@
 {% extends 'layout.html' %}
 {% load static %}
 {% block content %}
+        <link rel="stylesheet" type="text/css" href="{% static 'css/table.css' %}">
+
     <div class="container" style="width: 50%;padding: 50px;background: #f1f1f1;margin: 50px auto;">
         <div class="row invoice row-printable">
             <div class="col-md-12">
                 <!-- col-lg-12 start here -->
                 <div class="panel panel-default plain" id="dash_0">
                     <!-- Start .panel -->
-                    <div class="panel-body p30">
+                    <div class="panel-body">
                         <div dir="rtl" class="row text-right">
                             <!-- Start .row -->
 
                             <!-- col-lg-6 end here -->
-                            <div class="col-lg-6">
+                            <div class="text-center col-12">
                                 <!-- col-lg-6 start here -->
                                 <div class="invoice-from">
                                     <strong>مشخصات گیرنده</strong>
                                     <ul style="border-top: 1px dashed black; list-style-type: none" class="w-100 text-right" >
-                                        <li>{{ order.receiver }}</li>
-                                        <li> {{ order.receiver.province }}, {{ order.receiver.city }}</li>
-                                        <li> {{ order.receiver.address }}</li>
+                                        <li> نام: <strong class="mx-5">{{ order.receiver }}</strong></li>
+                                        <li> آدرس: <strong class="mx-5">{{ order.receiver.province }}, {{ order.receiver.city }}, {{ order.receiver.address }} </strong></li>
                                     </ul>
                                 </div>
                             </div>
@@ -30,28 +31,30 @@
                                 <div class="invoice-details mt25">
                                     <div class="well">
                                         <ul lass="list-unstyled mb0" style="list-style-type: none">
-                                            <li><strong>سفارش:</strong> {{ order.key  }}@</li>
-                                            <li><strong>تراکنش</strong> {{ order.transaction.receipt.reference_id }}</li>
-                                            <li><strong>تاریخ سفارش:</strong> {{ order.date_created }} </li>
-                                            <li><strong>وضعیت:</strong> {{ order.status_fa }} </li>
+                                            <li>سفارش:<strong class="mx-4"> {{ order.key  }}@ </strong></li>
+                                            <li>تراکنش<strong class="mx-4"> {{ order.transaction.receipt.reference_id }} </strong></li>
+                                            <li>تاریخ:<strong class="mx-4"> {{ order.date_created }} </strong> </li>
+                                            <li>وضعیت:<strong class="mx-4"> {{ order.status_fa }} </strong></li>
                                         </ul>
                                     </div>
                                 </div>
 
                                 <div class="invoice-items">
-                                    <div class="table-responsive" style="overflow: hidden; outline: none;" tabindex="0">
-                                        <table class="table table-bordered">
+                                    <div class="container-table-orders m-0 p-0" style="overflow: hidden; outline: none;" tabindex="0">
+                                    <div class="wrap-table-orders m-0 p-0">
+
+                                        <table class="table-orders table-bordered">
                                             <thead>
                                                 <tr>
-                                                    <th class="per70 text-center">کالا</th>
-                                                    <th class="per5 text-center">تعداد</th>
-                                                    <th class="per25 text-center">هزینه کل</th>
+                                                    <th class="table-column-1 text-center">کالا</th>
+                                                    <th class="table-column-1 text-center">تعداد</th>
+                                                    <th class="table-column-1  text-center">هزینه (تومن)</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                             {% for item in items  %}
                                                 <tr>
-                                                    <td>
+                                                    <td  class="table-column-1 text-center p-4">
                                                         {{ item.product }}
                                                             {% if item.variations.all  %}
                                                                 {% for v in item.variations.all %}
@@ -61,34 +64,32 @@
                                                                 {% endfor %}
                                                             {% endif %}
                                                     </td>
-                                                    <td class="text-center">1</td>
-                                                    <td class="text-center">$25.00 USD</td>
+                                                    <td class="table-column-1 text-center p-3">1</td>
+                                                    <td class="table-column-1 text-center p-3">{{ item.cost }}</td>
                                                 </tr>
                                             {% endfor %}
                                             </tbody>
                                             <tfoot>
-                                                <tr>
-                                                    <th colspan="2" class="text-right">جمع اولیه</th>
-                                                    <th class="text-center">$237.00 USD</th>
+                                                <tr >
+                                                    <th class="text-right p-4">جمع اولیه</th>
+                                                    <th colspan="2"  class="text-center p-3">{{ order.cost }}</th>
                                                 </tr>
                                                 <tr>
-                                                    <th colspan="2" class="text-right">تخفیفات:</th>
-                                                    <th class="text-center">$47.40 USD</th>
+                                                    <th class="text-right p-4">تخفیفات</th>
+                                                    <th colspan="2" class="text-center p-3">{{ order.discounts }}-</th>
                                                 </tr>
                                                 <tr>
-                                                    <th colspan="2" class="text-right">هزینه ارسال:</th>
-                                                    <th class="text-center">$47.40 USD</th>
+                                                    <th class="text-right p-4">هزینه ارسال</th>
+                                                    <th colspan="2" class="text-center p-3">{{ order.shipping_cost }}</th>
                                                 </tr>
                                                 <tr>
-                                                    <th colspan="2" class="text-right">قیمت آخر:</th>
-                                                    <th class="text-center">{{ order.must_be_paid }} تومن</th>
+                                                    <th class="text-right p-4">قیمت آخر</th>
+                                                    <th colspan="2" class="text-center p-3">{{ order.must_be_paid }}</th>
                                                 </tr>
                                             </tfoot>
                                         </table>
                                     </div>
-                                </div>
-                                <div class="invoice-footer mt25">
-                                    <p class="text-center">Thank you for shopping with us!</p>
+                                    </div>
                                 </div>
                             </div>
                             <!-- col-lg-12 end here -->
